# Lab2_CNN

./: .gitignore  README.md  config.py  data.py  main.py  model.py  pyproject.toml  requirements.txt  train.py  trained_model.pth  utils.py
