[tool.poetry]
name = "lab2-cnn"
version = "0.1.0"
description = "automating dataset extension project"
authors = ["vladimirovich124 <260vladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
